--- a/helm/microservice/templates/deployment.yaml
+++ b/helm/microservice/templates/deployment.yaml
@@ -30,14 +30,10 @@ spec:
           {{- end }}
           {{- end }}
           readinessProbe:
-            httpGet:
-              path: /health
-              port: {{ .Values.container.port | default 8080 }}
+            httpGet: { path: /, port: {{ .Values.container.port | default 8080 }} }
             initialDelaySeconds: 5
             periodSeconds: 10
           livenessProbe:
-            httpGet:
-              path: /health
-              port: {{ .Values.container.port | default 8080 }}
+            httpGet: { path: /, port: {{ .Values.container.port | default 8080 }} }
             initialDelaySeconds: 10
             periodSeconds: 20
