--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
             git config user.name  "${GIT_USER}"
             git config user.email "${GIT_USER}@users.noreply.github.com"
             git add "${VALUES_FILE}"
-            git commit -m "ci(circleci): image -> ${IMAGE_REPO}:${SHORT_SHA}" || echo "No changes"
+            git commit -m "ci(circleci): image -> ${IMAGE_REPO}:${SHORT_SHA} [skip ci]" || echo "No changes"
             git push "https://${GIT_USER}:${GIT_PAT}@github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}.git" HEAD:${CIRCLE_BRANCH}
 
 workflows:
