--- a/helm/microservice/values-dev.yaml
+++ b/helm/microservice/values-dev.yaml
@@ -4,8 +4,9 @@ image:
   pullPolicy: IfNotPresent
 replicaCount: 1
 service:
-  type: ClusterIP
+  type: NodePort
   port: 80
+  nodeePort: 30080
 container:
   port: 8080
   env:
